# leaderboard-github-bot

./: .dockerignore  Dockerfile.app  Dockerfile.nginx  docker-compose.yml  nginx.conf  pyproject.toml
leaderboard_github_bot/: main.py
